# bmi-prms6-soil

./: .gitattributes  .travis.yml  CMakeLists.txt  README.md
bmi_prms_soil/: .gitignore  bmi_prms_soil.sln
bmi_prms_soil/bmi_prms_soil/: bmi_prms_soil.vfproj
bmi_prms_soil/irf_ex/: .gitignore  irf_ex.vfproj
bmi_prms_soil/irf_ex/pipestem_soil/: control.simple1
bmi_prms_soil/irf_ex/pipestem_soil/output/: summary_daily.nc  summary_daily.txt
bmi_prms_soil/irf_ex/pipestem_surface/: control.simple1
bmi_prms_soil/irf_ex/pipestem_surface/output/: summary_daily.nc  summary_daily.txt
bmi_prms_soil/test_get_value/: test_get_value.vfproj
bmi_prms_soil/test_get_value/pipestem/output/: summary_daily.nc
bmi_prms_soil/test_get_value_at_indices/: test_get_value_at_indices.vfproj
bmi_prms_soil/test_get_value_at_indices/pipestem/output/: summary_daily.nc
bmi_prms_soil/test_get_value_ptr/: .gitignore  test_get_value_ptr.vfproj
bmi_prms_soil/test_get_value_ptr/pipestem/output/: summary_daily.nc
bmi_prms_soil/test_set_value/: .gitignore  test_set_value.vfproj
bmi_prms_soil/test_set_value_at_indices/: .gitignore  test_set_value_at_indices.vfproj
examples/: CMakeLists.txt  irf_ex.f90  irf_ex_ptr.f90
notebooks/: prms_and_bmi_compare.ipynb
projects/pipestem/: control_soil.simple1
projects/pipestem_soil/: control.simple1
projects/pipestem_surface/: control.simple1
src/: CMakeLists.txt  bmi.f90  bmi_prms_soil.f90  bmi_prms_soil.f90.bak  m_prms_soil.f90
tests/: CMakeLists.txt  fixtures.f90  test_finalize.f90  test_get_component_name.f90  test_get_current_time.f90  test_get_end_time.f90  test_get_grid_edge_count.f90  test_get_grid_edge_nodes.f90  test_get_grid_face_count.f90  test_get_grid_face_edges.f90  test_get_grid_face_nodes.f90  test_get_grid_node_count.f90  test_get_grid_nodes_per_face.f90  test_get_grid_origin.f90  test_get_grid_size.f90  test_get_grid_spacing.f90  test_get_grid_type.f90  test_get_grid_x.f90  test_get_grid_y.f90  test_get_grid_z.f90  test_get_input_item_count.f90  test_get_input_var_names.f90  test_get_output_item_count.f90  test_get_output_var_names.f90  test_get_start_time.f90  test_get_time_step.f90  test_get_time_units.f90  test_get_value.f90  test_get_value_at_indices.f90  test_get_value_ptr.f90  test_get_var_grid.f90  test_get_var_itemsize.f90  test_get_var_location.f90  test_get_var_nbytes.f90  test_get_var_type.f90  test_get_var_units.f90  test_initialize.f90  test_set_value.f90  test_set_value_at_indices.f90  test_update.f90  (+1 more)
